# tcbench

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements-imc23.txt
docs/: 404.html  _serve_site.sh  index.html  main.html.DEPRECATED  objects.inv
docs.material/: about.md  artifacts.md  index.md  index.md.DEPRECATED  quick_tour.md
docs.material/css/: fonts.css  tables_style.css
docs.material/datasets/: curation_and_metadata.md  datasets.md  import.md  index.md  install.md  metadata.md
docs.material/datasets/guides/: index.md  tutorial_load_datasets.md
docs.material/datasets/install/: index.md  mirage19.md  mirage22.md  ucdavis-icdm19.md  utmobilenet21.md
docs.material/datasets/samples_count/: index.md  mirage19.md  mirage22.md  ucdavis-icdm19.md  utmobilenet21.md
docs.material/datasets/schemas/: index.md  mirage19.md  mirage22.md  ucdavis-icdm19.md  utmobilenet21.md
docs.material/modeling/: aim_repositories_content.md  campaigns.md  exploring_artifacts.md  index.md  overview.md  runs.md
docs.material/modeling/aim_repos/: aim_webui.md  aimrepo_subcmd.md  index.md
docs.material/overrides/: home.html  home.js
docs.material/paper_tables_and_figures/: figure10b_icdm_finetuning_per_class_metrics_on_human.md  figure11_dropout_impact_supervised_setting.ipynb  figure11_dropout_impact_supervised_setting.md  figure1_confusion_matrix_supervised_setting.ipynb  figure1_confusion_matrix_supervised_setting.md  figure2_confusion_matrix_supervised_setting.ipynb  figure2_confusion_matrix_supervised_setting.md  figure2_ucdavis_per_class_average_flowpic.ipynb  figure2_ucdavis_per_class_average_flowpic.md  figure3_ucdavis_augmentations_comparison.ipynb  figure3_ucdavis_augmentations_comparison.md  figure4_augmentations_comparison_across_datasets_critical_distance.ipynb  figure4_ucdavis_per_class_average_flowpic.md  figure5_augmentations_comparison_across_datasets_average_rank.ipynb  figure5_augmentations_comparison_across_datasets_average_rank.md  figure5_ucdavis_augmentations_comparison.md  figure6_augmentations_comparison_across_datasets_critical_distance.ipynb  figure6_augmentations_comparison_across_datasets_critical_distance.md  figure6_ucdavis_kde_on_pkts_size.ipynb  figure7_augmentations_comparison_across_datasets_average_rank.ipynb  figure7_augmentations_comparison_across_datasets_average_rank.md  miscellaneous_stats.ipynb  miscellaneous_stats.md  reference.md  table10_ucdavis-icdm19_tukey.md  table1_datasets_properties.ipynb  table2_datasets_properties.csv  table2_datasets_properties.ipynb  table2_datasets_properties.md  table2_xgboost_baseline.ipynb  table2_xgboost_baseline.md  table3_ucdavis-icdm19_comparing_data_augmentations_functions.md  table3_xgboost_baseline.md  table4_simclr_dropout_and_projectionlayer.md  table4_ucdavis-icdm19_comparing_data_augmentations_functions.md  table4_ucdavis-icdm19_comparing_data_augmentations_functions_test_on_human.csv  table4_ucdavis-icdm19_comparing_data_augmentations_functions_test_on_leftover.csv  table4_ucdavis-icdm19_comparing_data_augmentations_functions_test_on_script.csv  table5_simclr_dropout_and_projectionlayer.csv  table5_simclr_dropout_and_projectionlayer.ipynb  (+14 more)
docs.material/papers/: index.md
docs.material/papers/imc23/: artifacts.md  campaigns.md  index.md  ml_artifacts.md  notebooks.md  pytest.md
docs.material/tcbench/: cli_intro.md  index.md  install.md  internals.md  overview.md
docs.material/tcbench/api/: tcbench_cli_clickutils.md  tcbench_cli_command_aimrepo.md  tcbench_cli_command_datasets.md  tcbench_cli_command_singlerun.md  tcbench_cli_richutils.md  tcbench_libtcdatasets_mirage22_json_to_parquet.md  tcbench_libtcdatasets_tcbench_mirage19_generate_splits.md  tcbench_libtcdatasets_tcbench_utmobilenet21_generate_splits.md  tcbench_libtcdatasets_utmobilenet21_csv_to_parquet.md  tcbench_modeling_aimutils.md  tcbench_modeling_augmentation.md  (+5 more)
docs/about/: index.html
docs/artifacts/: artifacts.md  index.html
docs/css/: jupyter-notebook.css
docs/datasets/: datasets.csv  index.html  metadata.md.DEPRECATED  tutorial_load_parquet.ipynb
docs/install/: index.html  install.md
docs/modeling/: index.html
docs/overrides/: home.html  home.js
docs/papers/: index.html
docs/quick_tour/: index.html
docs/search/: search_index.json
docs/tcbench/: index.html
notebooks/imc23/: LICENSE  figure10b_icdm_finetuning_per_class_metrics_on_human.ipynb  figure11_dropout_impact_supervised_setting.ipynb  figure1_flowpic_example.ipynb  figure3_confusion_matrix_supervised_setting.ipynb  figure3_ucdavis_augmentations_comparison.ipynb  figure4_ucdavis_per_class_average_flowpic.ipynb  figure5_ucdavis_augmentations_comparison.ipynb  figure8_ucdavis_kde_on_pkts_size.ipynb  miscellaneous_stats.ipynb  table10_ucdavis-icdm19_tukey.ipynb  table3_xgboost_baseline.ipynb  table4_ucdavis-icdm19_comparing_data_augmentations_functions.ipynb  table7_larger_trainset.ipynb  table8_augmentation-at-loading_on_other_datasets.ipynb
src/tcbench/: FIGSHARE_RESOURCES.yml  __init__.py  core.py  fileutils.py
tcbench/cli/: __init__.py  clickutils.py  command_campaign.py  command_datasets.py  command_singlerun.py  main.py  rich.theme
tcbench/libtcdatasets/: datasets_utils.py  mirage19_generate_splits.py  mirage19_json_to_parquet.py  mirage22_generate_splits.py  ucdavis_icdm19_generate_splits.py  utmobilenet21_csv_to_parquet.py  utmobilenet21_generate_splits.py
tcbench/modeling/: __init__.py  backbone.py  run_augmentations_at_loading_xgboost.py  run_campaign_contrastive_learning_and_finetune.py  run_contrastive_learning_and_finetune.py
tests/: conftest.py  test_augmentations_at_loading.py  test_augmentations_at_loading_xgboost.py  test_cli_command_campaign.py  test_cli_command_singlerun.py  test_contrastive_learning_and_finetune.py  test_libtcdatasets_datasets_utils.py  test_modeling_backbone.py  test_modeling_dataprep.py  test_modeling_methods.py
(+239 files in other folders)
